# typing-english

./: Cargo.toml  README.md
src/: game.rs  main.rs  option.rs  term_check.rs
